--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,7 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;800&display=swap');
 
-$primaryCol : #EDEADE;
+$primaryCol : #fff;
 $secondaryCol : #242424;
 
 
